--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node NetologyTest.js"
+    "test": "node NetologyTest.js",
+    "e2e": "playwright test"
   },
   "author": "",
   "devDependencies": {
